Edited pom.xml and minor fixes